# gophkeeper

./: .gitignore  go.mod  go.sum
client/: Cargo.toml
client/src/: lib.rs
client/src/cli/: app.rs  mod.rs
client/src/core/: app.rs  client.rs  crypto.rs  mod.rs  models.rs
client/src/tui/: app.rs  clipboard.rs  events.rs  mod.rs  runner.rs  ui.rs
cmd/server/: main.go
configs/: config.yaml
internal/config/: config.go  interface.go
internal/domain/: entities.go  errors.go
internal/logger/: logger.go
internal/repository/: context.go  interface.go  mapper.go  memory.go  migrate.go  postgres.go  queries.go  querry_logger.go  query_logger.go
internal/server/: app.go
internal/server/service/: interface.go  service.go
internal/server/transport/: context.go  handlers.go  interface.go  middleware.go
internal/utils/: context.go
migrations/: 1_init.down.sql  1_init.up.sql
